# gtkcomm

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in  gtkcomm.spec.in
doc/: FAQ  Makefile.am  USAGE
po/: ChangeLog  Makefile.in.in  POTFILES.in  ko.po
res/: Makefile.am  bookmarks  chatrc  gtkcommrc  gtkrc.in  iselrc
res/pixmap/: tb_capture.xpm  tb_close.xpm  tb_down.xpm  tb_exit.xpm  tb_save.xpm  tb_up.xpm
res/script/: SCRIPT.txt  chol-login.scr  chol-logout.scr  com-login.scr  dialog.scr  down.ascii  down.xdm  download.scr  flash.scr  hitel-login.scr  kldp-login.scr  kldp-logout.scr  local-login.scr  local-logout.scr  monitor.scr  now-login.scr  startup.scr  startup.scr.in
src/: .indent.pro  Makefile.am  gtkcomm_lock.c  gtkutil.c  gtkutil.h  mbyte.c  mbyte.h  pcAutoRes.c  pcChat.c  pcChat.h  pcCompat.c  pcCompat.h  pcConfig.c  pcCtrl.c  pcISel.c  pcMain.c  pcMain.h  pcModem.c  pcPTY.c  pcScript.c  pcSetting.h  pcSignal.c  pcStatus.c  pcTRx.c  pcTelnet.c  pcTerm.c  pcTerm.h  pcUtil.c
src/pixmaps/: README  green.xpm  red.xpm  yellow.xpm
src/test/: gtkscript.c  test.c
